// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildTaskDetailPrompt > includes subtasks and dependencies 1`] = `
"<page_context>The user is currently viewing the detail page of task T-3. When the user says "this task" or refers ambiguously, it means T-3.</page_context>
<task>
<hint>This tag contains the complete context of the task the user is viewing. Do NOT call viewTask to re-fetch it.</hint>
T-3 Chapter 3
Status: ● running     Priority: high
Instruction: 写第3章 评测方法论
Description: 面向开发者
Agent: agt_xxx
Parent: T-1
Dependencies: completion: T-2

Subtasks:
  T-3-1 ✓ completed Draft
  T-3-2 ○ backlog Polish ← blocks: T-3-1
</task>"
`;

exports[`buildTaskDetailPrompt > renders minimal task with page_context header 1`] = `
"<page_context>The user is currently viewing the detail page of task T-3. When the user says "this task" or refers ambiguously, it means T-3.</page_context>
<task>
<hint>This tag contains the complete context of the task the user is viewing. Do NOT call viewTask to re-fetch it.</hint>
T-3 Chapter 3
Status: ● running     Priority: high
Instruction: 写第3章 评测方法论
</task>"
`;

exports[`buildTaskDetailPrompt > renders workspace tree and activities timeline 1`] = `
"<page_context>The user is currently viewing the detail page of task T-3. When the user says "this task" or refers ambiguously, it means T-3.</page_context>
<task>
<hint>This tag contains the complete context of the task the user is viewing. Do NOT call viewTask to re-fetch it.</hint>
T-3 Chapter 3
Status: ● running     Priority: high
Instruction: 写第3章 评测方法论

Workspace (2):
  📁 Drafts (doc_root)
  └── 📄 ch3.md (doc_ch3)  1200 chars

Activities:
  💬 3h ago Topic #1 Outline ✓ completed  tpc_001
  📋 2h ago Brief [decision] 大纲通过 [normal] ✏️ approve  brief_001
  💭 1h ago 👤 user 需要加评测章节
  💭 30m ago 🤖 agent 已添加评测章节
</task>"
`;
